# libfsntfs

./: .codecov.yml  .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  acinclude.m4  appveyor.yml  build.ps1  configure.ac  libfsntfs-wiki.ini  libfsntfs.ini  libfsntfs.nuspec  libfsntfs.pc.in  libfsntfs.spec.in  pyproject.toml.in  setup.cfg.in  synclibs.ps1  synclibs.sh  syncsharedlibs.sh  synctestdata.ps1  synctestdata.sh  tox.ini
fsntfstools/: Makefile.am  bodyfile.c  bodyfile.h  digest_hash.c  digest_hash.h  fsntfsinfo  fsntfsinfo.c  fsntfsmount.c  fsntfsoutput.c  fsntfsoutput.h  fsntfstools_getopt.c  fsntfstools_getopt.h  fsntfstools_i18n.h  fsntfstools_libbfio.h  fsntfstools_libcerror.h  fsntfstools_libclocale.h  fsntfstools_libcnotify.h  fsntfstools_libcpath.h  fsntfstools_libcstring.h  fsntfstools_libcsystem.h  fsntfstools_libfcache.h  fsntfstools_libfdata.h  fsntfstools_libfdatetime.h  fsntfstools_libfguid.h  fsntfstools_libfsntfs.h  fsntfstools_libfusn.h  fsntfstools_libfwnt.h  fsntfstools_libhmac.h  fsntfstools_libuna.h  fsntfstools_output.c  fsntfstools_output.h  fsntfstools_signal.c  fsntfstools_signal.h  fsntfstools_unused.h  info_handle.c  info_handle.h  mount_dokan.c  mount_dokan.h  mount_file_entry.c  mount_file_entry.h  (+10 more)
include/: Makefile.am  libfsntfs.h.in
include/libfsntfs/: codepage.h  definitions.h.in  error.h  extern.h  features.h.in  types.h.in
libfsntfs/: Makefile.am  fsntfs_attribute_list.h  fsntfs_file_name.h  fsntfs_index.h  fsntfs_logged_utility_stream.h  fsntfs_mft_attribute.h  fsntfs_mft_attribute_list.h  fsntfs_mft_entry.h  fsntfs_object_identifier.h  fsntfs_reparse_point.h  fsntfs_secure.h  fsntfs_standard_information.h  fsntfs_txf_data.h  fsntfs_volume_header.h  fsntfs_volume_information.h  libfsntfs.c  libfsntfs.rc.in  libfsntfs_alternate_data_stream.c  libfsntfs_alternate_data_stream.h  libfsntfs_attribute.c  libfsntfs_attribute.h  libfsntfs_attribute_list.c  libfsntfs_attribute_list.h  libfsntfs_attribute_list_attribute.c  libfsntfs_attribute_list_attribute.h  libfsntfs_attribute_list_entry.c  libfsntfs_attribute_list_entry.h  libfsntfs_bitmap_values.c  libfsntfs_bitmap_values.h  libfsntfs_buffer_data_handle.c  libfsntfs_buffer_data_handle.h  libfsntfs_cluster_block.c  libfsntfs_cluster_block.h  libfsntfs_cluster_block_data.c  libfsntfs_cluster_block_data.h  libfsntfs_cluster_block_data_handle.c  libfsntfs_cluster_block_data_handle.h  libfsntfs_cluster_block_stream.c  libfsntfs_cluster_block_stream.h  libfsntfs_cluster_block_vector.c  (+152 more)
msvscpp/: Makefile.am  libfsntfs.sln
msvscpp/fsntfs_test_attribute/: fsntfs_test_attribute.vcproj
msvscpp/fsntfs_test_attribute_list/: fsntfs_test_attribute_list.vcproj
msvscpp/fsntfs_test_attribute_list_entry/: fsntfs_test_attribute_list_entry.vcproj
msvscpp/fsntfs_test_bitmap_values/: fsntfs_test_bitmap_values.vcproj
msvscpp/fsntfs_test_buffer_data_handle/: fsntfs_test_buffer_data_handle.vcproj
msvscpp/fsntfs_test_cluster_block/: fsntfs_test_cluster_block.vcproj
msvscpp/fsntfs_test_cluster_block_data/: fsntfs_test_cluster_block_data.vcproj
msvscpp/fsntfs_test_cluster_block_data_handle/: fsntfs_test_cluster_block_data_handle.vcproj
msvscpp/fsntfs_test_cluster_block_stream/: fsntfs_test_cluster_block_stream.vcproj
msvscpp/fsntfs_test_cluster_block_vector/: fsntfs_test_cluster_block_vector.vcproj
msvscpp/fsntfs_test_compressed_block/: fsntfs_test_compressed_block.vcproj
msvscpp/fsntfs_test_compressed_block_data_handle/: fsntfs_test_compressed_block_data_handle.vcproj
msvscpp/fsntfs_test_compressed_block_descriptor/: fsntfs_test_compressed_block_descriptor.vcproj
msvscpp/fsntfs_test_compressed_block_vector/: fsntfs_test_compressed_block_vector.vcproj
msvscpp/fsntfs_test_mft/: fsntfs_test_mft.vcproj
ossfuzz/: Makefile.am  file_entry_fuzzer.cc  mft_metadata_file_fuzzer.cc  ossfuzz_libbfio.h  ossfuzz_libfsntfs.h  volume_fuzzer.cc
pyfsntfs/: Makefile.am  pyfsntfs.c  pyfsntfs.h  pyfsntfs_attribute.c  pyfsntfs_attribute.h  pyfsntfs_attribute_types.c  pyfsntfs_attribute_types.h  pyfsntfs_attributes.c  pyfsntfs_attributes.h  pyfsntfs_data_stream.c  pyfsntfs_data_stream.h  pyfsntfs_data_streams.c  pyfsntfs_data_streams.h  pyfsntfs_datetime.c  pyfsntfs_datetime.h  pyfsntfs_error.c  pyfsntfs_error.h  pyfsntfs_file_attribute_flags.c  pyfsntfs_file_attribute_flags.h  pyfsntfs_file_entries.c  pyfsntfs_file_entries.h  pyfsntfs_file_entry.c  pyfsntfs_file_entry.h  pyfsntfs_file_name_attribute.c  pyfsntfs_file_name_attribute.h  pyfsntfs_file_object_io_handle.c  pyfsntfs_file_object_io_handle.h  pyfsntfs_guid.c  pyfsntfs_guid.h  pyfsntfs_integer.c  pyfsntfs_integer.h  pyfsntfs_libbfio.h  pyfsntfs_libcerror.h  pyfsntfs_libclocale.h  pyfsntfs_libcstring.h  pyfsntfs_libfguid.h  pyfsntfs_libfsntfs.h  pyfsntfs_libuna.h  pyfsntfs_mft_metadata_file.c  pyfsntfs_mft_metadata_file.h  (+27 more)
pyfsntfs-python2/: Makefile.am
tests/: Makefile.am  atlocal.in  fsntfs_test_attribute.c  fsntfs_test_attribute_list.c  fsntfs_test_attribute_list_entry.c  fsntfs_test_bitmap_values.c  fsntfs_test_buffer_data_handle.c  fsntfs_test_cluster_block.c  fsntfs_test_cluster_block_data.c  fsntfs_test_cluster_block_data_handle.c  fsntfs_test_cluster_block_stream.c  fsntfs_test_cluster_block_vector.c  fsntfs_test_compressed_block.c  fsntfs_test_compressed_block_data_handle.c  fsntfs_test_compressed_block_descriptor.c  fsntfs_test_compressed_block_vector.c  fsntfs_test_compressed_data_handle.c  fsntfs_test_compression.c  fsntfs_test_compression_unit_data_handle.c  fsntfs_test_compression_unit_descriptor.c  fsntfs_test_data_extent.c  fsntfs_test_data_run.c  fsntfs_test_data_stream.c  fsntfs_test_directory.c  fsntfs_test_directory_entries_tree.c  fsntfs_test_directory_entry.c  fsntfs_test_error.c  fsntfs_test_extent.c  fsntfs_test_extern.h  fsntfs_test_file_entry.c  fsntfs_test_file_name_attribute.c  fsntfs_test_file_name_values.c  fsntfs_test_file_system.c  fsntfs_test_fixup_values.c  fsntfs_test_functions.c  fsntfs_test_functions.h  fsntfs_test_get_version.c  fsntfs_test_getopt.c  fsntfs_test_getopt.h  fsntfs_test_index.c  (+102 more)
(+150 files in other folders)
