MSVSCPP_FILES = \
	fsntfs_test_error/fsntfs_test_error.vcproj \
	fsntfs_test_open_close/fsntfs_test_open_close.vcproj \
	fsntfs_test_read/fsntfs_test_read.vcproj \
	fsntfs_test_seek/fsntfs_test_seek.vcproj \
	fsntfs_test_support/fsntfs_test_support.vcproj \
	fsntfsinfo/fsntfsinfo.vcproj \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcsystem/libcsystem.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfsntfs/libfsntfs.vcproj \
	libfusn/libfusn.vcproj \
	libfwnt/libfwnt.vcproj \
	libuna/libuna.vcproj \
	pyfsntfs/pyfsntfs.vcproj \
	libfsntfs.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

