MSVSCPP_FILES = \
	fsntfs_test_attribute/fsntfs_test_attribute.vcproj \
	fsntfs_test_bitmap_values/fsntfs_test_bitmap_values.vcproj \
	fsntfs_test_cluster_block/fsntfs_test_cluster_block.vcproj \
	fsntfs_test_compressed_block/fsntfs_test_compressed_block.vcproj \
	fsntfs_test_compressed_block_descriptor/fsntfs_test_compressed_block_descriptor.vcproj \
	fsntfs_test_data_run/fsntfs_test_data_run.vcproj \
	fsntfs_test_data_stream/fsntfs_test_data_stream.vcproj \
	fsntfs_test_directory/fsntfs_test_directory.vcproj \
	fsntfs_test_directory_entry/fsntfs_test_directory_entry.vcproj \
	fsntfs_test_error/fsntfs_test_error.vcproj \
	fsntfs_test_file_entry/fsntfs_test_file_entry.vcproj \
	fsntfs_test_file_name_attribute/fsntfs_test_file_name_attribute.vcproj \
	fsntfs_test_file_name_values/fsntfs_test_file_name_values.vcproj \
	fsntfs_test_index/fsntfs_test_index.vcproj \
	fsntfs_test_index_entry/fsntfs_test_index_entry.vcproj \
	fsntfs_test_index_node/fsntfs_test_index_node.vcproj \
	fsntfs_test_index_value/fsntfs_test_index_value.vcproj \
	fsntfs_test_io_handle/fsntfs_test_io_handle.vcproj \
	fsntfs_test_logged_utility_stream_values/fsntfs_test_logged_utility_stream_values.vcproj \
	fsntfs_test_mft/fsntfs_test_mft.vcproj \
	fsntfs_test_mft_entry/fsntfs_test_mft_entry.vcproj \
	fsntfs_test_mft_metadata_file/fsntfs_test_mft_metadata_file.vcproj \
	fsntfs_test_notify/fsntfs_test_notify.vcproj \
	fsntfs_test_object_identifier_values/fsntfs_test_object_identifier_values.vcproj \
	fsntfs_test_reparse_point_attribute/fsntfs_test_reparse_point_attribute.vcproj \
	fsntfs_test_reparse_point_values/fsntfs_test_reparse_point_values.vcproj \
	fsntfs_test_security_descriptor_index/fsntfs_test_security_descriptor_index.vcproj \
	fsntfs_test_security_descriptor_index_value/fsntfs_test_security_descriptor_index_value.vcproj \
	fsntfs_test_security_descriptor_values/fsntfs_test_security_descriptor_values.vcproj \
	fsntfs_test_standard_information_values/fsntfs_test_standard_information_values.vcproj \
	fsntfs_test_support/fsntfs_test_support.vcproj \
	fsntfs_test_txf_data_values/fsntfs_test_txf_data_values.vcproj \
	fsntfs_test_usn_change_journal/fsntfs_test_usn_change_journal.vcproj \
	fsntfs_test_volume/fsntfs_test_volume.vcproj \
	fsntfs_test_volume_header/fsntfs_test_volume_header.vcproj \
	fsntfs_test_volume_information_attribute/fsntfs_test_volume_information_attribute.vcproj \
	fsntfs_test_volume_information_values/fsntfs_test_volume_information_values.vcproj \
	fsntfs_test_volume_name_attribute/fsntfs_test_volume_name_attribute.vcproj \
	fsntfs_test_volume_name_values/fsntfs_test_volume_name_values.vcproj \
	fsntfsinfo/fsntfsinfo.vcproj \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfsntfs/libfsntfs.vcproj \
	libfusn/libfusn.vcproj \
	libfwnt/libfwnt.vcproj \
	libuna/libuna.vcproj \
	pyfsntfs/pyfsntfs.vcproj \
	libfsntfs.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

